fix overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -8,4 +8,5 @@ canvas {
 	width: 100%;
 	height: 100%;
 	margin: 0;
+	overflow: hidden;
 }
